# UCS

./: .gitignore  README.md
BlockChain/: main.py
BlockChain/c#/: Program.cs
BlockChain/c++/usc/: .gitignore  CMakeLists.txt  CMakePresets.json  usc.cpp  usc.h
BlockChain/c++/usc-lib/: CMakeLists.txt  CMakePresets.json  vcpkg_rf.txt
BlockChain/c++/usc-lib/src/: usc-lib.cpp  usc-lib.h
BlockChain/python/: block.py  main.py
Logo/: Logo.ai
Web/back/: .env  main.js  package-lock.json  package.json  start.py
Web/back/commands/: ping.js
Web/back/discord/: discord.js
Web/back/discord/commands/: loger.js
Web/back/modules/: config.js  discord.js  error.js  event.js  hash.js  jwt.js
Web/front/usc/: README.md  angular.json  package-lock.json  package.json
Web/front/usc/src/: index.html
Web/front/usc/src/app/: app.component.spec.ts  app.component.ts
